# api-gateway-service

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
middleware/: metrics_middleware.py
models/: notification.py
rabbit_mq/: receive.py  send.py
utils/: circuit_breaker.py  etcd_service.py  load_request.py  metrics.py  service_client.py  validate_user_token.py
utils/rabbit_mq/: connection.py  producer.py
utils/redis/: redis_utils.py
